chore: format code using Prettier
